--- a/codingtovictory/day1/takeHomeChallenge/index.html
+++ b/codingtovictory/day1/takeHomeChallenge/index.html
@@ -1,1 +1,25 @@
-s
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>Day 1 I joined the Victory Code Slack Channel. Today, Saturday 5/4, I connected with a teammate Beau and we spent time taling on the phone getting to know each other. Also, I was able to connect with my mentor, Ruxin, who reached out. We are planning to meet over zoon tomorrow, Sunday 5/5, at 7pm
+
+
+</p>
+</body>
+</html>
+
+
+
+
+
+
+
+<!-- comment out the code: command + / -->
+<!-- to start a html, '! then return' -->
+
+
