add a dog image

--- a/codingtovictory/day4/takeHomeChallenge/index.html
+++ b/codingtovictory/day4/takeHomeChallenge/index.html
@@ -12,6 +12,9 @@
         <li>Mo Better Blues</li>
         <li>To Sleep With Anger</li>
     </ul>
+    <div>
+        <img src="https://images.dog.ceo/breeds/eskimo/n02109961_9348.jpg" alt="doggie"/>
+    </div>
     
 </body>
 </html>
