html with css page

--- a/codingtovictory/day4/takeHomeChallenge/index.html
+++ b/codingtovictory/day4/takeHomeChallenge/index.html
@@ -2,19 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width;, initial-scale=1.0">
-    <title>day 4 challenge</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <ul>
-        <li>Round Midnight</li>
-        <li>25th Hour</lI>
-        <li>Mo Better Blues</li>
-        <li>To Sleep With Anger</li>
-    </ul>
-    <div>
-        <img src="https://images.dog.ceo/breeds/eskimo/n02109961_9348.jpg" alt="doggie"/>
-    </div>
-    
+    <div>div1</div>
+    <div>div2</div>
+    <div>div3</div>
+    <div>div4</div>
 </body>
 </html>
